--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -1,24 +1,7 @@
-﻿ <!-- /#wrapper -->
-@*
+﻿
+  <!-- /#wrapper -->
 
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
 
-<!-- Metis Menu Plugin JavaScript -->
-@Scripts.Render("~/Content/adminsb/vendor/metisMenu/metisMenu.min.js")
-
-<!-- Custom Theme JavaScript -->
-@Scripts.Render("~/Content/adminsb/dist/js/sb-admin-2.js")
-<!-- Morris Charts JavaScript -->
-@Scripts.Render("~/Content/adminsb/vendor/raphael/raphael.min.js")
-@Scripts.Render("~/Content/adminsb/vendor/morrisjs/morris.min.js")
-@Scripts.Render("~/Content/adminsb/data/morris-data.js")
-@Scripts.Render("~/bundles/ajax")
-@Scripts.Render("~/Content/css")
-
-*@
-
-<!--ISMAEL UPDATE-->
 
 @Scripts.Render("~/Octagon/assets/vendor/jquery/jquery.min.js")
 @Scripts.Render("~/Octagon/assets/vendor/bootstrap/js/bootstrap.min.js")
@@ -27,4 +10,7 @@
 @Scripts.Render("~/Octagon/assets/vendor/morrisjs/morris.min.js")
 @Scripts.Render("~/Octagon/assets/data/morris-data.js")
 @Scripts.Render("~/Octagon/assets/vendor/dist/js/sb-admin-2.js")
+
+
+
 
