Se arreglo Edit and Create, para no agregar elementos duplicados o ya eliminados

--- a/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
+++ b/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
@@ -74,6 +74,11 @@
 
                 $("#SplitAmountPercent").val(percent);
             });
+        } else {
+            $("#SplitAmount").keyup(function() {
+                $("#SplitAmount").val(0);
+                
+            });
         }
     </script>
     <script>
