Actualizacion en PartnerRepository

--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -34,7 +34,7 @@
                     <i class="fa fa-btc fa-fw" style="font-size:20px"></i>LTC/USD: </a> 
                 <a></a>USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
             </h5>
-            <h1>company name</h1>
+            <h1>@Session["businessName"].ToString()</h1>
         </div>
         <div class="col-md-3">
 
