--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
-<h3 class="alert-info">List of Partners</h3>
+<div class="container">
+<h3> List of Partners</h3>
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         
@@ -29,10 +29,13 @@
     </div>
 </nav>
 
-<p class="alert alert-info">
+    <div class="alert-info">
+<h3>
     <strong>@ViewBag.Error</strong>
-</p>
-<table class="table table-striped table-hover ">
+</h3>
+    </div>
+
+<table class="table table-hover table-striped table-condensed">
     
     <thead>
     <tr>
@@ -46,7 +49,7 @@
     </tr>
     </thead>
     <tbody id ="listOfPartners">
-        <tr class="info">
+        <tr>
             <td>@Model.BusinessName</td>
             <td>@Model.Parent.BusinessName</td>
             <td>@Model.Address1</td>
@@ -84,7 +87,7 @@
     
     </tbody>
 </table> 
-        
+ </div>       
 @section Scripts {
     @Scripts.Render("~/bundles/search")
 }
