--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -1,55 +1,109 @@
-﻿
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-@if (Request.IsAuthenticated)
-{
-    <div>
-        <img src="~/Uploads/@Session["logo"]" width="100" height="50" alt="" class="img-responsive img-rounded">
-    </div>
-    <div class="navbar-header">
+﻿ @using Microsoft.AspNet.Identity
+<!-- Navigation -->
 
-        
-        @Html.ActionLink(Session["businessName"].ToString(), "Index", "Dashboard", "", htmlAttributes: new {@class = "navbar-brand"})
-        
-            &nbsp;&nbsp;&nbsp; CryptoCurrency Market &nbsp;&nbsp;&nbsp;&nbsp;
-            @Session["BTC"] &nbsp;&nbsp;&nbsp;
-            @Session["ETH"] &nbsp;&nbsp;&nbsp;
-            @Session["LTC"]&nbsp;&nbsp;&nbsp;
-        
-    </div>
-}
-    <ul class="nav navbar-top-links navbar-right">
-      
-        <li class="dropdown">
-            @if (Request.IsAuthenticated)
-            {
-                          
-                @Html.AntiForgeryToken()
-                <a class="dropdown-toggle" data-toggle="dropdown" href="@Url.Action("Index", "Dashboard")">Hello @User.Identity.Name
-                        
-                    <i class="fa fa-user fa-fw"></i><i class="fa fa-caret-down"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-user">
-        
-                    <li class="divider"></li>
-                    <li>
-                        @using (Html.BeginForm("Logout", "Account", FormMethod.Post, new { @class = "navbar-right" }))
-                        {  @Html.AntiForgeryToken()
-                            @Html.ActionLink("Logout", "Logout", "Account")}
-                            </li>
-                            <li>
-                                @using (Html.BeginForm("", "", FormMethod.Post, new { @class = "navbar-right" }))
-                                {  @Html.AntiForgeryToken()
-                                    @Html.ActionLink("Profile", "Details", "Partners", new {id = @Session["partnerId"]}, "")}
-                                    </li>
-                </ul>
-                
-            }
+
+
+
+
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    <!-- /.navbar-header -->
+    <div class="row">
+        <div class="col-md-3 ">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+            </div>
+        </div>
+        <div class="col-md-6" style="text-align:center;">
+            <h5><a href="#"> 
+                <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD</a>
+             </h5>
             
-            <!-- /.dropdown-user -->
-        </li>
-        <!-- /.dropdown -->
-    </ul>
-   
+            <h1>company name</h1>
+        </div>
+        <div class="col-md-3">
+
+
+            <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
+
+                    @if (Request.IsAuthenticated)
+                    {
+
+                        @Html.AntiForgeryToken()
+                        <a class="dropdown-toggle active" data-toggle="dropdown" href="@Url.Action("Index", "Dashboard")" aria-expanded="true">
+                            <label>Hello, @User.Identity.GetUserName()</label>
+                            <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-user in">
+                            <!--<li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a> -->
+
+                            <li>
+                                <a href="#" class="active"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+
+                                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                                {  @Html.AntiForgeryToken()
+                                    <a href="javascript:document.getElementById('logoutForm').submit()" class="active"><i class="fa fa-sign-out fa-fw"></i> Logout</a>}
+                            </li>
+                        </ul>
+
+
+                    }
+                    else
+                    {
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+                            <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+                        </ul>
+                    }
+
+
+
+                    <!--    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                <label>Hello, Username</label>
+                <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-user">
+                <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+
+                <li>
+                    <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                </li>
+
+            </ul>-->
+                    <!-- /.dropdown-user -->
+                </li>
+                <!-- /.dropdown -->
+            </ul>
+
+
+
+
+
+
+
+
+
+                </div>
+
+    </div>
+
     @Html.Partial("Sections/Sidebar")
     <!-- /.navbar-static-side -->
 </nav>
