Cryptocurrencies logos added

--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -28,10 +28,14 @@
                     <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD: </a> 
                 <a></a>USD @Session["BTC"] &nbsp;&nbsp;&nbsp;
                 <a href="#">
-                    <i class="fa fa-btc fa-fw" style="font-size:20px"></i>ETH/USD: </a> 
+                    <img src="~/Octagon/assets/img/eth-16x16.png">
+                    <i style="font-size: 20px"></i>ETH/USD:
+                </a> 
                 <a></a>USD @Session["ETH"] &nbsp;&nbsp;&nbsp;
                 <a href="#">
-                    <i class="fa fa-btc fa-fw" style="font-size:20px"></i>LTC/USD: </a> 
+                    <img src="~/Octagon/assets/img/ltc-16x16.png">
+                    <i style="font-size: 20px"></i>LTC/USD:
+                </a> 
                 <a></a>USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
             </h5>
             <h1>@Session["businessName"].ToString()</h1>
