--- a/OctagonPlatform/Views/TerminalAlerts/Index.cshtml
+++ b/OctagonPlatform/Views/TerminalAlerts/Index.cshtml
@@ -1,16 +1,18 @@
 ﻿@model IEnumerable<OctagonPlatform.Models.TerminalAlert>
 
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
+}
+
+<h2>Index</h2>
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TerminalId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notificated)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.CashAvailable)
         </th>
@@ -58,12 +60,7 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TerminalId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Notificated)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.CashAvailable)
         </td>
@@ -105,11 +102,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CardReader)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
