--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="@Url.Action("Index", "TerminalAlerts")">
                     <i class="fa fa-flag fa-fw"></i> Alerts
                 </a>
             </li>
