--- a/OctagonPlatform/Views/Shared/Sections/Header.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Header.cshtml
@@ -42,6 +42,7 @@
 @Styles.Render("~/Octagon/assets/vendor/dist/css/sb-admin-2.css")
 @Styles.Render("~/Octagon/assets/vendor/morrisjs/morris.css")
 @Styles.Render("~/Octagon/assets/vendor/font-awesome/css/font-awesome.min.css")
+@Styles.Render("~/Octagon/assets/css/Dashboard.css")
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-16x16.png" sizes="16x16" />
 
