--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -6,12 +6,12 @@
 }
 <div class="alingleft">
     <h3>Create Terminal</h3>
-
+    <hr>
     @using (Html.BeginForm("Create", "Terminals"))
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
-            <p class="alert alert-danger">
+            <p class="alert alert-warning">
                 All fields are <strong>required.</strong>
                 @ViewBag.Error
                 @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
