--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -6,45 +6,40 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <div class="alingleft">
-    <div>
-        <h3> Create Partner</h3>
-    </div>
-
+    <h3> Create Partner</h3>
+    <hr>
     @using (Html.BeginForm("Create", "Partners"))
     {
         @Html.AntiForgeryToken()
-        <div class="alert">
-            <h3>
-                <strong>All fields are required.</strong>
-            </h3>
-        </div>
-
+        <div class="form-group">
+            <p class="alert alert-warning">
+                    <strong>All fields are required.</strong>
         @ViewBag.Error
         @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
-
+        <p>
         <div class="form-group">
             @Html.LabelFor(m => m.BusinessName)
-            @Html.TextBoxFor(m => m.BusinessName, new {@class = "form-control", autofocus = "autofocus", placeholder = "Company's Name"})
+            @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", placeholder = "Company's Name" })
             @Html.ValidationMessageFor(m => m.BusinessName)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.ParentId)
-            @Html.DropDownListFor(m => m.ParentId, new SelectList(Model.Parents, "Id", "BusinessName"), "", new {@class = "form-control"})
+            @Html.DropDownListFor(m => m.ParentId, new SelectList(Model.Parents, "Id", "BusinessName"), "", new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.ParentId)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Status)
-            @Html.EnumDropDownListFor(m => m.Status, "", new {@class = "form-control"})
+            @Html.EnumDropDownListFor(m => m.Status, "", new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Status)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Address1)
-            @Html.TextBoxFor(m => m.Address1, new {@class = "form-control", placeholder = "124 SW 105 Ave"})
+            @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "124 SW 105 Ave" })
             @Html.ValidationMessageFor(m => m.Address1)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Address2)
-            @Html.TextBoxFor(m => m.Address2, new {@class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181"})
+            @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181" })
             @Html.ValidationMessageFor(m => m.Address2)
         </div>
         <div class="form-group">
@@ -54,8 +49,8 @@
                     <option value="231">United States</option>
                     @foreach (var item in Model.Countries)
                 {
-                <option value="@item.Id">@item.Name</option>
-                }
+                        <option value="@item.Id">@item.Name</option>
+                    }
                 </select>
                 @Html.ValidationMessageFor(m => m.CountryId)
 
@@ -69,8 +64,8 @@
                     <option value="3930">Florida</option>
                     @foreach (var item in Model.States)
                 {
-                <option value="@item.Id">@item.Name</option>
-                }
+                        <option value="@item.Id">@item.Name</option>
+                    }
                 </select>
                 @Html.ValidationMessageFor(m => m.StateId)
 
@@ -84,7 +79,7 @@
                     <option value="43769">Miami</option>
                     @foreach (var item in Model.Cities)
                     {
-                    <option value="@item.Id">@item.Name</option>
+                        <option value="@item.Id">@item.Name</option>
                     }
                 </select>
                 @Html.ValidationMessageFor(m => m.CityId)
@@ -93,12 +88,12 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Email)
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com"})
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com" })
             @Html.ValidationMessageFor(m => m.Email)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.WorkPhone)
-            @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187"})
+            @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
             @Html.ValidationMessageFor(m => m.WorkPhone)
         </div>
         <div class="form-group">
@@ -116,6 +111,7 @@
             @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus", placeholder = "wwww.website.com" })
             @Html.ValidationMessageFor(m => m.WebSite)
         </div>
+            </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
