--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -57,10 +57,10 @@
             <td>@Model.Mobile</td>
             <td>@Model.Email</td>
             <td>@Model.Status</td>
-            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = Model.Id})</td>
-            <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = Model.Id})
+            <td><i class="fa fa-pencil"></i>@Html.ActionLink("Edit", "Edit", new {id = Model.Id})</td>
+            <td><i class="fa fa-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = Model.Id})
             </td>
-            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new {id = Model.Id})</td>
+            <td><i class="fa fa-list"></i>@Html.ActionLink("Details", "Details", new {id = Model.Id})</td>
 
 
         </tr>
