--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <div class="alingleft">
+    <br><br/>
     <h3> Create Partner</h3>
     <hr>
     @using (Html.BeginForm("Create", "Partners"))
@@ -112,12 +113,12 @@
             @Html.ValidationMessageFor(m => m.WebSite)
         </div>
             </div>
-        <div class="form-group">
-            <div class="col-lg-10 col-lg-offset-2">
+        
+            <div>
                 <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
                 <button type="submit" class="btn btn-primary">Save</button>
             </div>
-        </div>
+       
 
     }
 </div>
