--- a/OctagonPlatform/Views/Partners/Delete.cshtml
+++ b/OctagonPlatform/Views/Partners/Delete.cshtml
@@ -3,118 +3,123 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+<div class="delete">
+    <br><br/>
+       <h3>Delete</h3>
+    <hr>
+    <div class="fontdelete">
+        <h3>Are you sure you want to delete this?</h3>
+    </div>
+   
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                Business Name
+            </dt>
 
-<h3 class="alert-danger">Delete</h3>
-
-<h3 class="alert-warning">Are you sure you want to delete this?</h3>
-<div>
-    <dl class="dl-horizontal">
-        <dt>
-            Business Name
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.BusinessName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.BusinessName)
+            </dd>
 
 
-        <dt>
-            City
-        </dt>
+            <dt>
+                City
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.City.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.City.Name)
+            </dd>
 
-        <dt>
-            Country
-        </dt>
+            <dt>
+                Country
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Country.Name)
-        </dd>
-        <dt>
-            State
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Country.Name)
+            </dd>
+            <dt>
+                State
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.State.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.State.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Status)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Status)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address1)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Address1)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address1)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Address1)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address2)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Address2)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address2)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Address2)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WorkPhone)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.WorkPhone)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WorkPhone)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WorkPhone)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Mobile)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Mobile)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Mobile)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Mobile)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Fax)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Fax)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Fax)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Fax)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WebSite)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.WebSite)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WebSite)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WebSite)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <input type="submit" value="Delete" class="btn btn-primary" /> 
-            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-        </div>
-    }
+            <div class="form-group">
+                <input type="submit" value="Delete" class="btn btn-primary" />
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            </div>
+
+        }
+    </div>
+
 </div>
-
-
