--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -3,103 +3,100 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
-<h3  class="alert-info">Partner: <strong class="alert-link">@Model.BusinessName</strong></h3>
-<br />
+<br><br/>
+<h3>Partner: <strong class="alert-link">@Model.BusinessName</strong></h3>
 <hr />
-<br />
+<div class="rowDetail">
+    <div class="col-md-4">
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("General Info", "GeneralInfo", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getGeneralInfo", LoadingElementId = "loading1", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getGeneralInfo" })</h3>
 
-<img src="~/Uploads/@Model.Logo" width="100" height="50" alt="" class="img-responsive img-rounded">
-<br/>
-<div>
-    @Html.ActionLink("Upload logo", "Index", "Logos", new { partnerId = @Model.Id, error = ""}, htmlAttributes: new{@class = "btn btn-primary"})
-</div>
-<br/>
-<hr />
-<br />
-<div class="panel-group" style="width: 50%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("General Info", "GeneralInfo", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getGeneralInfo", LoadingElementId = "loading1", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getGeneralInfo" })</h3>
-
-            <div id="getGeneralInfo" class="panel-collapse collapse">
-                <img id="loading1" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    <div id="getGeneralInfo" class="panel-collapse collapse">
+                        <img id="loading1" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<br />
-<hr />
-<br />
-<div class="panel-group" style="width: 100%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("Contacts", "Contacts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getContacts", LoadingElementId = "loading2", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getContacts" })</h3>
-            <div id="getContacts" class="panel-collapse collapse">
-                <img id="loading2" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+        <hr />
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("Contacts", "Contacts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getContacts", LoadingElementId = "loading2", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getContacts" })</h3>
+                    <div id="getContacts" class="panel-collapse collapse">
+                        <img id="loading2" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<br/>
-<hr />
-<br />
-<div class="panel-group" style="width: 100%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("Partners", "Partners", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getPartners", LoadingElementId = "loading3", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getPartners" })</h3>
+        <hr />
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("Partners", "Partners", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getPartners", LoadingElementId = "loading3", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getPartners" })</h3>
 
-            <div id="getPartners" class="panel-collapse collapse">
-                <img id="loading3" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    <div id="getPartners" class="panel-collapse collapse">
+                        <img id="loading3" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<br />
-<hr />
-<br />
-<div class="panel-group" style="width: 100%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("Bank Accounts", "BankAccounts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getBankAccounts", LoadingElementId = "loading4", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getBankAccounts" })</h3>
 
-            <div id="getBankAccounts" class="panel-collapse collapse">
-                <img id="loading4" style="display:none" src="~/Content/loading_icon.gif" alt="" />
-            </div>
-        </div>
     </div>
-</div>
-<br/>
-<hr />
-<br />
-<div class="panel-group" style="width: 100%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("Terminals", "Terminals", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getTerminals", LoadingElementId = "loading5", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getTerminals" })</h3>
+    <div class="col-md-4">
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("Bank Accounts", "BankAccounts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getBankAccounts", LoadingElementId = "loading4", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getBankAccounts" })</h3>
 
-            <div id="getTerminals" class="panel-collapse collapse">
-                <img id="loading5" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    <div id="getBankAccounts" class="panel-collapse collapse">
+                        <img id="loading4" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<br />
-<hr />
-<br />
-<div class="panel-group" style="width: 100%;">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="alert-info">@Ajax.ActionLink("Users", "Users", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getUsers", LoadingElementId = "loading6", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getUsers" })</h3>
 
-            <div id="getUsers" class="panel-collapse collapse">
-                <img id="loading6" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+        <hr />
+
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("Terminals", "Terminals", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getTerminals", LoadingElementId = "loading5", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getTerminals" })</h3>
+
+                    <div id="getTerminals" class="panel-collapse collapse">
+                        <img id="loading5" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
+
+        <hr />
+
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3>@Ajax.ActionLink("Users", "Users", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getUsers", LoadingElementId = "loading6", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getUsers" })</h3>
+
+                    <div id="getUsers" class="panel-collapse collapse">
+                        <img id="loading6" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
-<br />
-<hr />
-<br />
+<div class="col-md-2">
+    <div class="imageupload">
+    <img src="~/Uploads/@Model.Logo" width="100" height="50" alt="" class="img-responsive img-rounded">
+    <br />
+
+    <div>
+        @Html.ActionLink("Upload logo", "Index", "Logos", new { partnerId = @Model.Id, error = "" }, htmlAttributes: new { @class = "btn btn-primary" })
+    </div>
+        </div>
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/search")
