--- a/OctagonPlatform/Views/Partners/Edit.cshtml
+++ b/OctagonPlatform/Views/Partners/Edit.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <div class="alingleft">
+    <br><br/>
     <h3>Edit Partner</h3>
     <hr>
     @using (Html.BeginForm("Edit", "Partners", new { @class = "form-group" }))
@@ -121,12 +122,12 @@
             @Html.ValidationMessageFor(m => m.WebSite)
         </div>
 
-        <div class="form-group">
-            <div class="col-lg-10 col-lg-offset-2">
+        
+            <div >
                 <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
                 <button type="submit" class="btn btn-primary">Save</button>
             </div>
-        </div>
+       
 
     }
 
