--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -22,7 +22,7 @@
         <th>Low Cash 3:</th>
         <th>@Model.LowCash3</th>
     </tr>
-    <tbody></tbody>
+    <tbody>Ignored Alerts</tbody>
 </table>
 @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention, new { @disabled = "disabled" }) Bill dispenser needs attention or out of service<br />
 @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention, new { @disabled = "disabled" }) Card reader needs attention or out of service<br />
@@ -101,6 +101,26 @@
                     </div>
                 </div>
             }
+        </div>
+    </div>
+</div>
+
+<div id="myModalWorkingHours" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+                <h3 class="alert-info">Edit Config Alert</h3>
+
+                @using (Html.BeginForm("SetWorkingHours", "Terminals"))
+                {
+                    @Model
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.TerminalId)
+
+                }
+            </div>
         </div>
     </div>
 </div>
