--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -4,10 +4,17 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
 <h3 class="alert-info">Terminal: <strong class="alert-info">@Model.Id</strong></h3>
 <br />
 <hr />
+<p>
+    <label for="amount">Price range:</label>
+    <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+</p>
+
+<div id="slider-range"></div>
+
+
 <br />
 @Html.ActionLink(linkText: "View messages", actionName: "Index", controllerName: "TerminalMessages", routeValues: new
 {
@@ -131,4 +138,27 @@
 
 @section Scripts {
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+
 }
+
+<!-- load jQuery 1.3.2 -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script type="text/javascript">
+    var jQuery_1_12_4 = $.noConflict(true);
+</script>
+<script>
+
+    jQuery_1_12_4(function () {
+        $("#slider-range").slider({
+            range: true,
+            min: 0,
+            max: 24,
+            values: [8, 13],
+            slide: function (event, ui) {
+                $("#amount").val("H " + ui.values[0] + ":00 - H " + ui.values[1]+":00");
+            }
+        });
+        $("#amount").val("H " + $("#slider-range").slider("values", 0) + ":00" +
+            " - H " + $("#slider-range").slider("values", 1)+":00");
+    });
+</script>
