--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -22,8 +22,9 @@
         <th>Low Cash 3:</th>
         <th>@Model.LowCash3</th>
     </tr>
-    <tbody>Ignored Alerts</tbody>
+    <tbody></tbody>
 </table>
+Ignored Alerts <br />
 @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention, new { @disabled = "disabled" }) Bill dispenser needs attention or out of service<br />
 @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention, new { @disabled = "disabled" }) Card reader needs attention or out of service<br />
 @Html.CheckBoxFor(m => m.IgnoreCassetteNotes, new { @disabled = "disabled" }) Cassette notes are out<br />
@@ -80,6 +81,7 @@
                     @Html.ValidationMessageFor(m => m.LowCash3)
                 </div>
                 <div class="form-group">
+                    Ignored Alerts <br />
                     @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention) Bill dispenser needs attention or out of service<br />
                     @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention) Card reader needs attention or out of service<br />
                     @Html.CheckBoxFor(m => m.IgnoreCassetteNotes) Cassette notes are out<br />
