--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -5,8 +5,19 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <div class="container">
-<h3>Terminals</h3>
+    <h3>Terminals</h3>
+    @Html.ActionLink(
+        linkText: "Add Terminal",
+        actionName: "Create",
+        controllerName: "Terminals",
+        routeValues: new
+        {
+            partnerId = int.Parse(Session["partnerId"].ToString())
+        },
+        htmlAttributes: new {@class= "btn btn-primary" }
+        )
     <hr>
+    @*
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         
@@ -29,11 +40,12 @@
         </div>
     </div>
 </nav>
-
-<div class="alert-info">
-    <strong>@ViewBag.Error</strong>
-</div>
-<table class="table table-hover table-striped table-condensed">
+*@
+    <div class="alert-info">
+        <strong>@ViewBag.Error</strong>
+    </div>
+    
+    <table class="table table-hover table-striped table-condensed">
     <thead>
         <tr>
             <th>Terminal ID</th>
