update home and CSS

--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
-            <!--<li class="sidebar-search">
+            <li class="sidebar-search">
                 <div class="input-group custom-search-form">
                     <input type="text" class="form-control" placeholder="Search...">
                     <span class="input-group-btn">
@@ -9,11 +9,10 @@
                         <i class="fa fa-search"></i>
                     </button>
                 </span>
-                </div> -->
+                </div> 
             <!-- /input-group -->
-           <!-- </li> -->
+           </li> 
             <li>
-             <!--   <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a> -->
                 <a href="@Url.Action("Index", "Dashboard", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
                     <i class="fa fa-dashboard fa-fw"></i> Dashboard
                 </a>
