--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -11,6 +11,10 @@
 @Scripts.Render("~/Octagon/assets/data/morris-data.js")
 @Scripts.Render("~/Octagon/assets/vendor/dist/js/sb-admin-2.js")
 
+@Scripts.Render("~/Scripts/datatables/jquery.datatables.js")
+@Scripts.Render("~/Scripts/datatables/datatables.bootstrap.js")
+
+
 
 
 
