--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -45,7 +45,7 @@
         <strong>@ViewBag.Error</strong>
     </div>
     
-    <table class="table table-hover table-striped table-condensed">
+    <table id="terminals" class="table table-hover table-striped table-condensed">
     <thead>
         <tr>
             <th>Terminal ID</th>
@@ -90,6 +90,16 @@
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/search")
-}
+    @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+    <script>
 
+        var jQuery_1_10_2 = $.noConflict(true);
+
+        jQuery_1_10_2(function () {
+            $("#terminals").DataTable();
+        });
+    </script>
+
+
+}
 
