--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <div class="container">
+    <div class="buttonterminal">
     <h3>Terminals</h3>
     @Html.ActionLink(
         linkText: "Add Terminal",
@@ -16,6 +17,7 @@
         },
         htmlAttributes: new {@class= "btn btn-primary" }
         )
+        </div>
     <hr>
     @*
 <nav class="navbar navbar-default"> 
