--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -68,10 +68,10 @@
             <td>@Model.Mobile</td>
             <td>@Model.Email</td>
             <td>@Model.Status</td>
-            <td><i class="fa fa-pencil"></i>@Html.ActionLink("Edit", "Edit", new {id = Model.Id})</td>
-            <td><i class="fa fa-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = Model.Id})
+            <td><i class="fa fa-pencil"style="font-size:16px;color:darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = Model.Id})</td>
+            <td><i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new {id = Model.Id})
             </td>
-            <td><i class="fa fa-list"></i>@Html.ActionLink("Details", "Details", new {id = Model.Id})</td>
+            <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new {id = Model.Id})</td>
 
 
         </tr>
@@ -86,10 +86,10 @@
                     <td>@item.Mobile</td>
                     <td>@item.Email</td>
                     <td>@item.Status</td>
-                    <td><i class="fa fa-pencil"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-                    <td><i class="fa fa-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    <td><i class="fa fa-pencil" style="font-size:16px;color:darkblue";></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+                    <td><i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new {id = item.Id})
                     </td>
-                    <td><i class="fa fa-list"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
+                    <td><i class="fa fa-list" style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new {id = item.Id})</td>
 
 
                 </tr>
