DataTables Re-Styled

--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -46,7 +46,7 @@
         <strong>@ViewBag.Error</strong>
     </h3> 
 </div>
-<table id="partners" class="cell-border">
+<table id="partners" class="table table-striped table-bordered">
     
     <thead>
     <tr>
