--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -47,7 +47,7 @@
         <strong>@ViewBag.Error</strong>
     </div>
     
-    <table id="terminals" class="cell-border">
+    <table id="terminals" class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>ID</th>
